# ifopt

./: CMakeLists.txt
ifopt_core/: CMakeLists.txt
ifopt_ipopt/: CMakeLists.txt
